Mon Jan 14 03:00:42 2002  Owen Taylor  <otaylor@redhat.com>

	* gnome-terminal.c: Deal with failure to parse colors
	from the palette.

	* gnome-terminal.c (save_preferences): Don't use now
	unsupported rgb:// form to save colors.

	* gnome-terminal.c (set_color_scheme): Remove extraneous
	forced redraw - the terminal widget should handle this.

	* gnome-terminal.c: Use gtk_option_menu_get_history(), now
	that it is in GTK+. Other option menu cleanups.

	* gnome-terminal.glade: Get rid of GnomeFontPicker widget.
	It's only bad news when we need X fonts. Just use the 
	entry.

	* Redo sizing and hints, using some fairly gross hacks.
	But it should actually work completely now. Turn off
	zvt hint setting with zvt_term_set_auto_window_hint().

Fri,  4 Jan 2002 22:28:51 -0500  Frank Belew <frb@ximian.com>

	* Makefile.am: remove -I$(includedir), bad things happen when
	  prefix is the same as gnome1 and that gets added so early on the
	  list

2001-12-09  Seth Nickell  <snickell@stanford.edu>

	* gnome-terminal.desktop:

	Change the name and description to Nils' panel
	menu layout.

2001-11-28  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	install .desktop file into datadir/applications
	
	* gnome-terminal.desktop:

	Add Categories field

2001-11-27  Gediminas Paulauskas <menesis@delfi.lt>

	* gnome-terminal.c (preferences_cmd): pass NULL instead of PACKAGE
	as domain for glade_xml_new.

2001-11-26  Mark McLoughlin  <mark@skynet.ie>

	* gnome-terminal.c: (load_url_cmd), (button_press): change
	  #warnings to #ifdef FIXME

	* gnome-x-font-selector.c:
	  (gnome_font_selection_show_font_info): some GdkAtom related
	  warnings fixage.

Mon, 19 Nov 2001 01:40:21 -0500 Frank Belew <frb@ximian.com>
	
	* gnome-terminal.c: replaced PACKAGE with GETTEXT_PACKAGE on all
          calls to bindtextdomain and textdomain
	* Makefile.am: added gnome-terminal.glade to EXTRA_DIST

2001-11-05  Michael Meeks  <michael@ximian.com>
